Fix PDF export